# biocellular-automata

./: README.md  dummy_update_2.py  dummy_update_3.py  pyproject.toml  requirements.txt  runner.py
.github/workflows/: ci.yml
ca_rules/: __init__.py  rule_110.py  rule_150.py  rule_90.py  wolfram_rule_30.py
configs/examples/: reaction_diffusion.yaml  rule_110.yaml
docs/: index.md  model_comparisons.md
scripts/: batch_export.py  benchmark.py  classify_behavior.py  compare_rules.py  generate_dataset.py  label_wolfram_classes.py  pattern_analysis.py  visualize_behavior.py  visualizer_behavior_map.py
src/: ca_core.py  discovery.py  registry.py
src/models/: continuous_diffusion.py  game_of_life.py  multistate_wave.py  reaction_diffusion.py
tests/: test_npz_io.py  test_reproducibility.py  test_shape.py
utils/: io.py  reporting.py  visualize.py
